apps/base/wallabag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app: wallabag
spec:
  selector:
    app: wallabag
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
